first completed version

--- a/index.html
+++ b/index.html
@@ -7,5 +7,46 @@
     </head>
     <body>
         <h1>My page</h1>
+        <section class="col-large-4 col-medium-6 col-small-12">
+            <div>
+                <h2 class="color-1">Chicken</h2>
+                <p>
+                    From Wikipedia:
+                    Chickens are one of the most common and widespread domestic animals, with a total population of 23.7 billion as of 2018.
+                    There are more chickens in the world than any other bird or domesticated fowl.
+                    Humans keep chickens primarily as a source of food (consuming both their meat and eggs) and, less commonly, as pets.
+                    Originally raised for cockfighting or for special ceremonies, chickens were not kept for food until the Hellenistic period (4th–2nd centuries BC).
+                </p>
+            </div>
+        </section>
+        <section class="col-large-4 col-medium-6 col-small-12">
+            <div>
+                <h2 class="color-2">Beef</h2>
+                <p>
+                    From Wikipedia:
+                    Beef is the culinary name for meat from cattle, particularly skeletal muscle.
+                    Humans have been eating beef since prehistoric times.
+                    Beef is a source of protein and nutrients.
+                    Most beef skeletal muscle meat can be used as is by merely cutting into certain parts, such as roasts,
+                    short ribs or steak (filet mignon, sirloin steak, rump steak, rib steak, rib eye steak, hanger steak, etc.),
+                    while other cuts are processed (corned beef or beef jerky).
+                    Trimmings, on the other hand, are usually mixed with meat from older, leaner (therefore tougher) cattle, are ground, minced or used in sausages.
+                </p>
+            </div>
+        </section>
+        <section class="col-large-4 col-medium-12 col-small-12">
+            <div>
+                <h2 class="color-3">Sushi</h2>
+                <p>
+                    From Wikipedia:
+                    Sushi is a traditional Japanese dish of prepared vinegared rice, usually with some sugar and salt,
+                    accompanying a variety of ingredients, such as seafood, often raw, and vegetables.
+                    Styles of sushi and its presentation vary widely, but the one key ingredient is "sushi rice", also referred to as shari, or sumeshi.
+                    Sushi is traditionally made with medium-grain white rice, though it can be prepared with brown rice or short-grain rice.
+                    It is very often prepared with seafood, such as squid, eel, yellowtail, salmon, tuna or imitation crab meat.
+                    Many types of sushi are vegetarian. It is often served with pickled ginger (gari), wasabi, and soy sauce.
+                </p>
+            </div>
+        </section>
     </body>
 </html>
