--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Module 2 - solution</title>
         <link href="./css/style.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width initial-scale=1">
     </head>
     <body>
         <h1>My page</h1>
