--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width initial-scale=1">
     </head>
     <body>
-        <h1>My page</h1>
+        <h1>Our menu</h1>
         <section class="col-large-4 col-medium-6 col-small-12">
             <div>
                 <h2 class="color-1">Chicken</h2>
